# misterx-web-ng

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/misterx/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
src/misterx/migrations/: 0001_initial.py  0002_submission_submitter_alter_submission_accepted_and_more.py  0003_alter_submission_points_override.py  0004_orderedtask_alter_game_tasks.py  0005_alter_orderedtask_options_and_more.py  0006_submission_feedback.py  0007_upload.py  0008_upload_uuid.py
src/misterx_root/: forms.py  local_settings.example.py  settings.py  urls.py  views.py  wsgi.py
src/static-source/js/: theme-setter.js
src/templates/: 403.html  404.html  500.html
src/templates/admin/: login.html
src/templates/base/: base.html  error_400.html  layout.html  navbar.html
src/templates/generic/: object_confirm_delete.html  object_create.html  object_detail.html  object_edit.html  object_list.html  task_select_widget.html
src/templates/misterx/: game_detail.html  game_list.html  no_active_game.html  no_unreviewed_submissions.html  player_detail.html  player_list.html  playergroup_detail.html  playergroup_list.html  submission_approve.html  submission_detail.html  submission_list.html  task_detail.html  task_list.html  user_submission_detail.html  user_submission_list.html
src/templates/registration/: logged_out.html  login.html  password_change_done.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
src/templates/tables/: filter_button.html  filter_modal.html  (+3 more)
src/utilities/: context_processors.py  views.py
(+10 files in other folders)
